[package]
name = "data-buffer"
version = "0.8.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple low-level data buffer type useful for IO and in homogeneous collections"
edition = "2018"

homepage = "https://github.com/elrnv/buffer"
repository = "https://github.com/elrnv/buffer"
readme = "README.md"

keywords = ["buffer", "io", "data"]

[badges]
travis-ci = { repository = "elrnv/buffer", branch = "master" }

[dependencies]
dyn-derive = { path = "dyn-derive", version = "0.1" }
reinterpret = "0.2"
num-traits = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }

[dev-dependencies]
serde_json = "1.0"
rand = "0.7"
criterion = "0.3"

[features]
numeric = ["num-traits"]
serde_all = ["serde", "serde_bytes"]
testing = []

[[bench]]
name = "type_erasure"
harness = false
