[package]
name = "dync"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An efficient alternative to `dyn Trait` for containerized types"
edition = "2018"

homepage = "https://github.com/elrnv/dync"
repository = "https://github.com/elrnv/dync"
readme = "README.md"

keywords = ["dyn", "trait", "vec", "any"]

[badges]
travis-ci = { repository = "elrnv/buffer", branch = "master" }

[dependencies]
dync-derive = { path = "dync-derive", version = "0.1" }
reinterpret = "0.2"
num-traits = { version = "0.2", optional = true }
downcast-rs = "1.1.1"

[dev-dependencies]
rand = "0.7"
criterion = "0.3"

[features]
numeric = ["num-traits"]

[[bench]]
name = "type_erasure"
harness = false
