[package]
name = "dync"
version = "0.5.2"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An efficient alternative to `dyn Trait` for containerized types"
edition = "2018"

homepage = "https://github.com/elrnv/dync"
repository = "https://github.com/elrnv/dync"
readme = "README.md"

keywords = ["dyn", "trait", "vec", "any"]

[badges]
travis-ci = { repository = "elrnv/dync", branch = "master" }

[dependencies]
downcast-rs = "1.1.1"
dync-derive = { path = "dync-derive", version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[features]
default = ["traits"]
traits = ["dync-derive"]
numeric = ["num-traits"]

[[bench]]
name = "type_erasure"
harness = false
