[package]
name = "dync-derive"
version = "0.4.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Attribute macros for producing `dync` compatible traits"
readme = "README.md"

homepage = "https://github.com/elrnv/dync"
repository = "https://github.com/elrnv/dync"
keywords = ["dyn", "trait", "any"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.4"
lazy_static = "1.4"
